# product-exchange-ui/src/app/services/models.ts
@@ -6,6 +6,7 @@ export { BorrowedProductResponse } from './models/borrowed-product-response';
 export { Feedback } from './models/feedback';
 export { FeedbackRequest } from './models/feedback-request';
 export { FeedbackResponse } from './models/feedback-response';
+export { ForgotPasswordRequest } from './models/forgot-password-request';
 export { GrantedAuthority } from './models/granted-authority';
 export { PageResponseBorrowedProductResponse } from './models/page-response-borrowed-product-response';
 export { PageResponseFeedbackResponse } from './models/page-response-feedback-response';
@@ -15,5 +16,6 @@ export { ProductRequest } from './models/product-request';
 export { ProductResponse } from './models/product-response';
 export { ProductTransactionHistory } from './models/product-transaction-history';
 export { RegistrationRequest } from './models/registration-request';
+export { ResetPasswordRequest } from './models/reset-password-request';
 export { Role } from './models/role';
 export { User } from './models/user';
