# product-exchange-ui/src/app/services/models/reset-password-request.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ResetPasswordRequest {
+  email: string;
+  newPassword: string;
+  otp: string;
+}
