# product-exchange/src/main/java/com/abhishek/product_exchange/auth/ResetPasswordRequest.java
@@ -1,0 +1,25 @@
+package com.abhishek.product_exchange.auth;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Size;
+import lombok.Data;
+
+@Data
+public class ResetPasswordRequest {
+
+    @Email
+    @NotEmpty(message = "Email is mandatory")
+    @NotNull(message = "Email is mandatory")
+    private String email;
+
+    @NotEmpty(message = "OTP is mandatory")
+    @NotNull(message = "OTP is mandatory")
+    private String otp;
+
+    @NotEmpty(message = "Password is mandatory")
+    @NotNull(message = "Password is mandatory")
+    @Size(min = 8, message = "Password should be 8 characters long minimum")
+    private String newPassword;
+}
